--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <link rel="stylesheet" href="path/to/swiper.min.css">
 
+    <link href= http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css rel=stylesheet>
+
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <title>Document</title>
@@ -29,10 +31,10 @@
     <section class=topSection>
         <div class=navWrapper>
             <nav>
-                <a href=#>Home</a>
-                <a href=#>About Us</a>
-                <a href=#>Sign Up</a>
-                <a href=#>Log In</a>
+                <a href=index.html><i class=ion-home></i> Home</a>
+                <a href=AboutUs.html><i class=ion-android-people></i> About Us</a>
+                <a href=SignUp.html><i class=ion-mouse></i> Sign Up</a>
+                <a href=LogIn.html><i class=ion-android-star-half></i>Log In</a>
             </nav>
         </div>
     </section>
