more about changes

--- a/AboutUs.html
+++ b/AboutUs.html
@@ -38,7 +38,7 @@
      <div class=teamMemberWrapper>
         <h5>Web UI Developer</h5>
         <div class="teamMember Kirk">
-
+            <img src="../../img/Kirk.jpg">
         </div>
         <i class="ion-social-github git"></i>
     </div>
@@ -46,7 +46,7 @@
     <div class=teamMemberWrapper>
         <h5>Web UI Developer</h5>
          <div class="teamMember Me">
-
+            <img src="../../img/Me.jpg">
         </div>
         <i class="ion-social-github git"></i>
     </div>
@@ -54,7 +54,7 @@
     <div class=teamMemberWrapper>
         <h5>Web UI Developer</h5>
         <div class="teamMember Ahmad">
-
+            <img src="../../img/Ahmad.jpg">
          </div>
          <i class="ion-social-github git"></i>
     </div>
@@ -62,7 +62,7 @@
     <div class=teamMemberWrapper>
         <h5>Front End Developer</h5>
         <div class="teamMember Leon">
-
+            <img src="../../img/Leon.jpg">
         </div>
         <i class="ion-social-github git"></i>
     </div>
@@ -70,7 +70,7 @@
     <div class=teamMemberWrapper>
         <h5>Front End Developer</h5>
         <div class="teamMember Reg">
-
+            <img src="../../img/Reg.png">
         </div>
         <i class="ion-social-github git"></i>
     </div>
@@ -78,7 +78,7 @@
     <div class=teamMemberWrapper>
         <h5>Back End Developer</h5>
         <div class="teamMember Aaron">
-
+            <img src="../../img/Aaron.jpg">
         </div>
         <i class="ion-social-github git"></i>
     </div>
