done for the most part, waiting on Hrefs

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
 
     <div class=underNav>
-        <h2 class="has-scroll-reveal animation fadeInUp"> Marketing App</h2>
+        <h2 class="has-scroll-reveal animation fadeInUp"> African Marketplace</h2>
     </div>
     
 <div class="swiper-container">
