--- a/AboutUs.html
+++ b/AboutUs.html
@@ -14,7 +14,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
      
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
-        <link href= http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css rel=stylesheet>
+        <link href= https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css rel=stylesheet>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Lato:100|Prata|Syncopate&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Syncopate&display=swap" rel="stylesheet">
